--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Configure status bar 
 set-option -g status-interval 1
+set-option -g allow-rename off
 
 # Change prefix key
 set -g prefix C-Space
@@ -46,9 +47,6 @@ bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
-
-# Locate status bar on top
-set-option -g status-position top
 
 # Use vim key bindings in copy mode
 setw -g mode-keys vi
