--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -6,6 +6,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # Status
+set-option -g status-position top
 set-option -g status-bg "colour8"
 set-option -g status-fg "colour15"
 
