--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,19 +7,23 @@ tap "keith/formulae"
 brew "autoconf"
 brew "automake"
 brew "cmake"
+brew "cowsay"
 brew "gettext"
+brew "jpeg"
 brew "libtool"
-brew "mas"
+brew "python@3.9"
 brew "ninja"
 brew "node"
+brew "openblas"
+brew "numpy"
 brew "perl"
 brew "pkg-config"
-brew "tmux"
+brew "speedtest-cli"
+brew "tmux", args: ["HEAD"]
 brew "trash"
 brew "tree"
 brew "vim"
+brew "wget"
 brew "zlib"
 brew "zsh-syntax-highlighting"
 cask "font-source-code-pro"
-cask "slack-beta"
-mas "Twitter", id: 409789998
