--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,11 +6,16 @@ tap "homebrew/core"
 tap "keith/formulae"
 brew "autoconf"
 brew "automake"
+brew "bat"
 brew "cmake"
 brew "cowsay"
+brew "fzf"
 brew "gettext"
+brew "gh"
 brew "jpeg"
+brew "libffi"
 brew "libtool"
+brew "llvm"
 brew "python@3.9"
 brew "ninja"
 brew "node"
@@ -18,6 +23,7 @@ brew "openblas"
 brew "numpy"
 brew "perl"
 brew "pkg-config"
+brew "ripgrep"
 brew "speedtest-cli"
 brew "tmux", args: ["HEAD"]
 brew "trash"
