--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,12 +3,15 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
+tap "homebrew/services"
 tap "keith/formulae"
 brew "autoconf"
 brew "automake"
 brew "bat"
 brew "cmake"
+brew "coreutils"
 brew "cowsay"
+brew "fd"
 brew "fzf"
 brew "gettext"
 brew "gh"
@@ -20,11 +23,12 @@ brew "python@3.9"
 brew "ninja"
 brew "node"
 brew "openblas"
-brew "numpy"
 brew "perl"
 brew "pkg-config"
+brew "poetry"
+brew "postgresql"
 brew "ripgrep"
-brew "speedtest-cli"
+brew "rust"
 brew "tmux", args: ["HEAD"]
 brew "trash"
 brew "tree"
@@ -32,4 +36,5 @@ brew "vim"
 brew "wget"
 brew "zlib"
 brew "zsh-syntax-highlighting"
+cask "appcleaner"
 cask "font-source-code-pro"
