--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -14,10 +14,10 @@
     "suggest.asciiCharactersOnly": true,
     "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
     "python.formatting.provider": "black",
+    "python.formatting.blackPath": "/opt/homebrew/bin/black",
     "python.formatting.blackArgs": [
         "--line-length=99"
     ],
-    "python.jediEnabled": false,
     "python.linting.enabled": true,
     "python.linting.flake8Args": [
         "--max-line-length=99",
@@ -27,10 +27,5 @@
     ],
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
-    "python.sortImports.args": [
-        "--line_length=99",
-        "--multi_line_output=3"
-    ],
-    "python.terminal.executeInFileDir": true,
     "python.analysis.useLibraryCodeForTypes": false
 }
