--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,8 +51,7 @@ setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi C-v send -X rectangle-toggle
-bind -T copy-mode-vi y send -X copy-selection
-bind -T copy-mode-vi Y send -X copy-line
+bind -T copy-mode-vi y send -X copy-pipe "pbcopy"
 
 bind-key C-p paste-buffer
 
