--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -11,30 +11,48 @@ brew "bat"
 brew "cmake"
 brew "coreutils"
 brew "cowsay"
-brew "fd"
-brew "fzf"
+brew "node"
 brew "gettext"
+brew "python@3.9"
+brew "exa"
+brew "fd"
+brew "fswatch"
+brew "fzf"
 brew "gh"
 brew "jpeg"
+brew "git"
 brew "libffi"
+brew "glow"
 brew "libtool"
+brew "jq"
 brew "llvm"
-brew "python@3.9"
+brew "luajit", args: ["HEAD"]
+brew "neofetch"
+brew "tree-sitter", args: ["HEAD"]
+brew "neovim", args: ["HEAD"]
 brew "ninja"
-brew "node"
-brew "openblas"
 brew "perl"
 brew "pkg-config"
 brew "poetry"
 brew "postgresql"
 brew "ripgrep"
 brew "rust"
+brew "thefuck"
+brew "tldr"
 brew "tmux", args: ["HEAD"]
 brew "trash"
 brew "tree"
 brew "vim"
 brew "wget"
 brew "zlib"
+brew "zsh"
+brew "zsh-autosuggestions"
+brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 cask "appcleaner"
+cask "discord"
 cask "font-source-code-pro"
+cask "google-chrome"
+cask "google-cloud-sdk"
+cask "keyboardcleantool"
+cask "slack"
