--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,45 +6,57 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "keith/formulae"
 brew "bat"
+brew "bazel"
+brew "python@3.9", link: false
 brew "coreutils"
 brew "cowsay"
+brew "docker"
 brew "exa"
 brew "fd"
+brew "jpeg"
+brew "ffmpeg"
 brew "fswatch"
 brew "fzf"
-brew "gettext"
 brew "gh"
 brew "git"
 brew "glow"
 brew "jq"
-brew "libffi"
 brew "llvm"
-brew "luajit", args: ["HEAD"]
-brew "tree-sitter", args: ["HEAD"]
-brew "neovim", args: ["HEAD"]
+brew "mas"
+brew "neovim"
 brew "node"
+brew "openblas"
 brew "perl"
-brew "pkg-config"
-brew "python@3.9"
 brew "poetry"
 brew "postgresql"
+brew "prettier"
+brew "prototool"
+brew "python@3.8"
+brew "rbenv"
 brew "ripgrep"
+brew "ruby"
 brew "rust"
 brew "thefuck"
 brew "tldr"
-brew "tmux", args: ["HEAD"]
+brew "tmux"
 brew "trash"
 brew "tree"
 brew "vim"
 brew "wget"
+brew "yarn"
+brew "zlib"
 brew "zsh"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 cask "appcleaner"
 cask "discord"
+cask "flutter"
 cask "font-source-code-pro"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "keyboardcleantool"
 cask "slack"
+mas "Magnet", id: 441258766
+mas "TweetDeck", id: 485812721
+mas "Xcode", id: 497799835
