Add cpu/mem usage to tmux status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,7 @@ set -g mouse off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Configure status bar 
