--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -11,7 +11,7 @@ set-option -g status-bg "colour8"
 set-option -g status-fg "colour15"
 
 set-option -g status-left "#[fg=#{?client_prefix,colour0,colour15},bg=#{?client_prefix,colour15,colour7}]#{?client_prefix,  PREFIX  ,  #S  }"
-set-option -g status-right "  #{battery_percentage}  #[bg=colour7]  %m/%d %H:%M  "
+set-option -g status-right "  #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -g 0 -m 2 -i 1 -a 0) #{battery_percentage}  #[bg=colour7]  %m/%d %H:%M  "
 
 # Window
 set-window-option -g window-status-format "#[fg=colour7]  #I #W  "
