Open same path when split/create tmux window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,9 +37,10 @@ bind-key j run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
 bind-key P switch-client -p
 bind-key N switch-client -n
 
-# Split windows
-bind-key v split-window -h
-bind-key s split-window -v
+# Split/Create windows
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 # Resize panes
 bind-key J resize-pane -D 5
