--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -49,6 +49,7 @@ brew "zsh"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
+cask "alfred"
 cask "appcleaner"
 cask "discord"
 cask "flutter"
@@ -57,6 +58,7 @@ cask "google-chrome"
 cask "google-cloud-sdk"
 cask "keyboardcleantool"
 cask "slack"
+cask "vanilla"
 mas "Magnet", id: 441258766
 mas "TweetDeck", id: 485812721
 mas "Xcode", id: 497799835
