--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -20,6 +20,8 @@ brew "fzf"
 brew "gh"
 brew "git"
 brew "glow"
+brew "gnu-sed"
+brew "grep"
 brew "jq"
 brew "llvm"
 brew "mas"
@@ -36,7 +38,7 @@ brew "rbenv"
 brew "ripgrep"
 brew "ruby"
 brew "rust"
-brew "thefuck"
+brew "svn"
 brew "tldr"
 brew "tmux"
 brew "trash"
@@ -49,15 +51,20 @@ brew "zsh"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
+cask "adobe-creative-cloud"
 cask "alfred"
 cask "appcleaner"
+cask "calibre"
 cask "discord"
+cask "docker"
+cask "figma"
 cask "flutter"
 cask "font-source-code-pro"
 cask "google-chrome"
 cask "google-cloud-sdk"
+cask "karabiner-elements"
 cask "keyboardcleantool"
 cask "slack"
-mas "Magnet", id: 441258766
+cask "timemator"
 mas "TweetDeck", id: 485812721
 mas "Xcode", id: 497799835
