--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,7 @@ bind-key j run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
     eval $(tmux showenv -gs TMUX_LAST_DETECTED_SESSION); \
     [ "$TMUX_LAST_DETECTED_SESSION" = "popup" ] \
     && tmux detach-client \
-    || tmux popup -KER "tmux attach -t popup || tmux new -s popup"'
+    || tmux popup -E "tmux attach -t popup || tmux new -s popup"'
 
 # Switch sessions
 bind-key P switch-client -p
