--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -6,18 +6,14 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # Status
+set -g status off
 set-option -g status-position top
-set-option -g status-bg "colour8"
-set-option -g status-fg "colour15"
-
-set-option -g status-left "#[fg=#{?client_prefix,colour0,colour15},bg=#{?client_prefix,colour15,colour7}]#{?client_prefix,  PREFIX  ,  #S  }"
-set-option -g status-right "  #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -g 0 -m 2 -i 1 -a 0) #{battery_percentage}  #[bg=colour7]  %m/%d %H:%M  "
 
 # Window
-set-window-option -g window-status-format "#[fg=colour7]  #I #W  "
-set-window-option -g window-status-current-format "#[bg=colour0]  #I #W #[fg=colour7]#{?window_zoomed_flag,#[fg=colour7]❯ zoomed in pane #P  , }"
-set -g message-style bg=colour0,fg=default
+set -g message-style bg=colour0,fg=colour15
 setw -g window-status-separator ""
+set -g pane-border-style fg=colour8
+set -g pane-active-border-style fg=colour8
 
 # Dim inactive window
 set-option -g focus-events on
@@ -25,8 +21,3 @@ setw -g window-active-style bg=colour0
 setw -g window-style bg=colour8
 set -g pane-active-border-style fg=colour7,bg=colour8
 set -g pane-border-style fg=colour7,bg=colour8
-
-# Set status bar length 
-set-option -g status-left-length 100
-set-option -g status-right-length 100
-
