--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -67,5 +67,6 @@ cask "keyboardcleantool"
 cask "rectangle"
 cask "slack"
 cask "timemator"
+mas "LINE", id: 539883307
 mas "TweetDeck", id: 485812721
 mas "Xcode", id: 497799835
