Simplify tmux visual settings

--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -5,19 +5,20 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Configure cursor
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
-# Status
-set -g status off
-set-option -g status-position top
+# Status Bar
+set -g status-justify left
+set -g status-bg colour0
+set -g status-fg colour7
+
+setw -g status-right "#S"
+setw -g status-left ""
+
+setw -g window-status-format "#[fg=colour8]#I:#W"
+setw -g window-status-current-format "#I:#W"
+setw -g window-status-separator " "
+
+set -g message-style bg=colour0,fg=colour7
 
 # Window
-set -g message-style bg=colour0,fg=colour15
-setw -g window-status-separator ""
 set -g pane-border-style fg=colour8
 set -g pane-active-border-style fg=colour8
-
-# Dim inactive window
-set-option -g focus-events on
-setw -g window-active-style bg=colour0
-setw -g window-style bg=colour8
-set -g pane-active-border-style fg=colour7,bg=colour8
-set -g pane-border-style fg=colour7,bg=colour8
