Simplify tmux status bar even more

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,9 @@ unbind C-b
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# Auto-renumbering
+set-option -g renumber-windows on
+
 # Open popup
 bind-key j run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
     eval $(tmux showenv -gs TMUX_LAST_DETECTED_SESSION); \
