--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -6,16 +6,19 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # Status Bar
-set -g status-justify left
+set -g status-position bottom
+
 set -g status-bg colour0
 set -g status-fg colour7
 
-setw -g status-right "#S"
-setw -g status-left ""
+set-option -g status-left-length 100
+set-option -g status-right-length 100
 
-setw -g window-status-format "#[fg=colour8]#I:#W"
-setw -g window-status-current-format "#I:#W"
-setw -g window-status-separator " "
+set -g status-left "#{?client_prefix,tmux prefix pressed,}"
+set -g status-right "#I#{?window_zoomed_flag, zoomed,} of #{session_windows} on #S"
+
+set -g window-status-format ""
+set -g window-status-current-format ""
 
 set -g message-style bg=colour0,fg=colour7
 
