Use hjkl to switch tmux panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,15 +23,12 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Open popup
-bind-key j run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
+bind-key p run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
     eval $(tmux showenv -gs TMUX_LAST_DETECTED_SESSION); \
     [ "$TMUX_LAST_DETECTED_SESSION" = "popup" ] \
     && tmux detach-client \
     || tmux popup -E "tmux attach -t popup || tmux new -s popup"'
-
-# Switch sessions
-bind-key P switch-client -p
-bind-key N switch-client -n
+unbind n
 
 # Split/Create windows
 bind-key v split-window -h -c "#{pane_current_path}"
@@ -44,12 +41,18 @@ bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
+# Switch panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 # Use vim key bindings in copy mode
 setw -g mode-keys vi
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi V send -X select-line
-bind -T copy-mode-vi C-v send -X rectangle-toggle
-bind -T copy-mode-vi y send -X copy-pipe "pbcopy"
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
+bind-key -T copy-mode-vi y send -X copy-pipe "pbcopy"
 
 bind-key C-p paste-buffer
 
