--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -2,8 +2,10 @@ gui:
   theme:
     selectedLineBgColor:
       - bold
+      - underline
     selectedRangeBgColor:
       - bold
+      - underline
   mouseEvents: false
   showListFooter: false
   showRandomTip: false
