Improve tmux status bar appearance

--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -1,27 +1,30 @@
-# Enable 256 colors
+# Colors
 set-option -g default-terminal screen-256color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# Configure cursor
+# Cursor
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # Status Bar
 set -g status-position bottom
 
-set -g status-bg colour0
+set -g status-bg colour8
 set -g status-fg colour7
 
-set-option -g status-left-length 100
+set -g message-style bg=colour8,fg=colour7
+
 set-option -g status-right-length 100
 
-set -g status-left "#{?client_prefix,tmux prefix pressed,}"
-set -g status-right "#I#{?window_zoomed_flag, zoomed,} of #{session_windows} on #S"
+set -g status-left ""
+set -g status-right ""
 
+set -g status-justify centre
 set -g window-status-format ""
-set -g window-status-current-format ""
-
-set -g message-style bg=colour0,fg=colour7
+set -g window-status-current-format "#{?client_prefix,#[fg=colour15]prefix ,}#{?window_zoomed_flag,zoomed ,}#I/#{session_windows} #S"
 
 # Window
 set -g pane-border-style fg=colour8
 set -g pane-active-border-style fg=colour8
+
+# Border
+set -g pane-border-lines heavy
