--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,6 +46,10 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+bind-key left select-pane -L
+bind-key down select-pane -D
+bind-key up select-pane -U
+bind-key right select-pane -R
 
 # Use vim key bindings in copy mode
 setw -g mode-keys vi
