--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,9 @@ set -s escape-time 0
 # Disable mouse
 set -g mouse off
 
+# Turn on focus events
+set -g focus-events on
+
 # Configure status bar 
 set-option -g status-interval 1
 set-option -g allow-rename off
