--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -66,6 +66,7 @@ cask "google-cloud-sdk"
 cask "karabiner-elements"
 cask "keyboardcleantool"
 cask "rectangle"
+cask "lunar"
 cask "slack"
 cask "spotify"
 cask "timing"
