--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -70,6 +70,7 @@ cask "lunar"
 cask "slack"
 cask "spotify"
 cask "timing"
+mas "EventScripts", id: 525319418
 mas "LINE", id: 539883307
 mas "TweetDeck", id: 485812721
 mas "Xcode", id: 497799835
