--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -10,6 +10,7 @@ brew "bazel"
 brew "python@3.9", link: false
 brew "coreutils"
 brew "cowsay"
+brew "efm-langserver"
 brew "exa"
 brew "fd"
 brew "jpeg"
@@ -65,8 +66,8 @@ cask "google-chrome"
 cask "google-cloud-sdk"
 cask "karabiner-elements"
 cask "keyboardcleantool"
-cask "rectangle"
 cask "lunar"
+cask "phoenix"
 cask "slack"
 cask "spotify"
 cask "timing"
