Stop using a-enter in lazygit (not working on macOS)

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -30,8 +30,8 @@ keybinding:
     nextBlock: '<down>'
     prevBlock-alt: '<c-k>'
     nextBlock-alt: '<c-j>'
-    select: '<enter>'
-    goInto: '<a-enter>'
+    select: '<tab>'
+    goInto: '<enter>'
     confirm: 'y'
     openFile: '<c-o>'
     pushFiles: '<F12>'
