Allow tmux popup to open with tmux keybind again

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,14 @@ set-window-option -g pane-base-index 1
 # Auto-renumbering
 set-option -g renumber-windows on
 
+# Open popup
+bind-key p run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
+    eval $(tmux showenv -gs TMUX_LAST_DETECTED_SESSION); \
+    [ "$TMUX_LAST_DETECTED_SESSION" = "popup" ] \
+    && tmux detach-client \
+    || tmux popup -E "tmux attach -t popup || tmux new -s popup"'
+unbind n
+
 # Split/Create windows
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -c "#{pane_current_path}"
