--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+# Set default terminal
+set-option -g default-terminal "xterm-16color"
+
 # Set shell to zsh
 set-option -g default-shell /bin/zsh
 
