--- a/zsh/externals/brew/config
+++ b/zsh/externals/brew/config
@@ -1,5 +1,5 @@
+# Environment Variables
+export BREW_PREFIX=$(brew --prefix)
+
 # Functions
 autoload -z $(dirname $0)/functions/*
-
-# For ARM (may be temporary)
-export PATH="/opt/homebrew/bin:/usr/local/bin:$PATH"
