Load rbenv lazily

--- a/zsh/externals/ruby/config
+++ b/zsh/externals/ruby/config
@@ -1,4 +1,10 @@
 # Environment variables
-export PATH="$(brew --prefix)/opt/ruby/bin:$PATH"
-export PATH="$(gem env | grep "EXECUTABLE DIRECTORY" | awk '{print $4}'):$PATH"
-eval "$(rbenv init -)"
+export PATH="$BREW_PREFIX/opt/ruby/bin:$PATH"
+export PATH="$(gem env | grep 'EXECUTABLE DIRECTORY' | awk '{print $4}'):$PATH"
+
+# Functions
+function rbenv() {
+  unfunction $0
+  eval $(rbenv init -)
+  $0 $@
+}
