--- a/zsh/externals/misc/config
+++ b/zsh/externals/misc/config
@@ -1,10 +1,10 @@
 # External source
-source $(brew --prefix)/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-source $(brew --prefix)/share/zsh-autosuggestions/zsh-autosuggestions.zsh
+source $BREW_PREFIX/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+source $BREW_PREFIX/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 
 # Environment variables
 export ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE='fg=7'
-export FPATH=$(brew --prefix)/share/zsh-completions:$FPATH
+export FPATH=$BREW_PREFIX/share/zsh-completions:$FPATH
 
 # Functions
 autoload -Uz compinit && compinit
