--- a/zsh/externals/go/config
+++ b/zsh/externals/go/config
@@ -1,3 +1,3 @@
 # Environment variables
-export GOPATH=$(go env GOPATH)
-export PATH=$PATH:$(go env GOPATH)/bin
+export GOPATH=$HOME/go
+export PATH=$PATH:$HOME/go/bin
