--- a/zsh/externals/misc/config
+++ b/zsh/externals/misc/config
@@ -7,7 +7,9 @@ export ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE='fg=7'
 export FPATH=$BREW_PREFIX/share/zsh-completions:$FPATH
 
 # Functions
-autoload -Uz compinit && compinit
+autoload -Uz compinit
+[ $(date +'%j') != $(stat -f '%Sm' -t '%j' $HOME/.zcompdump) ] && compinit || compinit -C
+
 autoload -Uz colors && colors
 
 # Options
