Use alacritty as main terminal emulator

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -56,6 +56,7 @@ brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 cask "adobe-creative-cloud"
+cask "alacritty"
 cask "appcleaner"
 cask "discord"
 cask "docker"
