--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # Set default terminal
-set-option -g default-terminal "xterm-16color"
+set-option -g default-terminal "tmux-256color"
 
 # Set shell to zsh
 set-option -g default-shell /bin/zsh
