--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -1,26 +1,29 @@
+# Colors
+set -as terminal-features ",alacritty:RGB"
+
 # Cursor
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # Status Bar
-set -g status-position bottom
+set -g status-position top
+set -g status-style fg="#808080",bg=default
 
-set -g status-bg colour8
-set -g status-fg colour7
+set -g message-style bg=default,fg=green
+set -g message-command-style bg=default,fg=green
 
-set -g message-style bg=colour8,fg=colour7
-
-set-option -g status-right-length 100
+set-option -g status-left-length 0
+set-option -g status-right-length 50
 
 set -g status-left ""
-set -g status-right ""
+set -g status-right "#{?client_prefix,#[fg=green],}#S"
 
-set -g status-justify centre
-set -g window-status-format ""
-set -g window-status-current-format "#{?client_prefix,#[fg=colour15]prefix ,}#{?window_zoomed_flag,zoomed ,}#I/#{session_windows} #S"
-
-# Window
-set -g pane-border-style fg=colour8
-set -g pane-active-border-style fg=colour8
+set -g status-justify left
+set -g window-status-format "●"
+set -g window-status-current-format "#{?window_zoomed_flag,#[fg=yellow],#[fg=green]}●"
 
 # Border
 set -g pane-border-lines heavy
+set -g pane-border-style fg="#303030"
+set -g pane-active-border-style fg="#303030"
+setw -g pane-border-status top
+setw -g pane-border-format "━"
