Add tmux bindkey to open lazygit

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,6 +36,10 @@ bind-key p run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
     || tmux popup -E "tmux attach -t popup || tmux new -s popup"'
 unbind n
 
+bind-key f run-shell 'tmux popup -d #{pane_current_path} -E lazygit'
+
+# TODO: bind-key o to run select-tmux-sessions
+
 # Split/Create windows
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -c "#{pane_current_path}"
