--- a/tmux/.tmux.visual.conf
+++ b/tmux/.tmux.visual.conf
@@ -1,5 +1,5 @@
 # Colors
-set -as terminal-features ",alacritty:RGB"
+set -as terminal-overrides ",alacritty:RGB"
 
 # Cursor
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
@@ -11,8 +11,8 @@ set -g status-style fg=colour7,bg=default
 set -g message-style bg=default,fg=colour2
 set -g message-command-style bg=default,fg=colour2
 
-set-option -g status-left-length 0
-set-option -g status-right-length 50
+set -g status-left-length 0
+set -g status-right-length 50
 
 set -g status-left ""
 set -g status-right "#{?client_prefix,#[fg=colour2],}#S"
