--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -25,6 +25,7 @@ brew "gnu-sed"
 brew "go"
 brew "grep"
 brew "jq"
+brew "jupyterlab"
 brew "lazygit"
 brew "llvm"
 brew "mas"
@@ -39,7 +40,7 @@ brew "prototool"
 brew "rbenv"
 brew "ripgrep"
 brew "ruby"
-brew "rust"
+brew "rustup"
 brew "svn"
 brew "tldr"
 brew "tmux"
@@ -64,8 +65,6 @@ cask "flutter"
 cask "font-source-code-pro"
 cask "google-chrome"
 cask "google-cloud-sdk"
-cask "keyboardcleantool"
-cask "lunar"
 cask "phoenix"
 cask "slack"
 cask "spotify"
