--- a/zsh/externals/python/config
+++ b/zsh/externals/python/config
@@ -1,6 +1,7 @@
 # Environment variables
 export PYTHONDONTWRITEBYTECODE=1
+export PATH=$HOMEBREW_PREFIX/opt/python@3.9/libexec/bin:$PATH
 
 # Aliases
-alias python="python3"
-alias pip="pip3"
+alias python=$HOMEBREW_PREFIX/bin/python3
+alias pip=$HOMEBREW_PREFIX/opt/python@3.9/libexec/bin/pip
