--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -40,6 +40,7 @@ brew "rbenv"
 brew "ripgrep"
 brew "ruby"
 brew "rustup"
+brew "shpotify"
 brew "svn"
 brew "tldr"
 brew "tmux"
@@ -47,7 +48,6 @@ brew "trash"
 brew "tree"
 brew "vim"
 brew "wget"
-brew "wtfutil"
 brew "yarn"
 brew "zlib"
 brew "zsh"
