Specify tmux popup size when opening lazygit

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,7 @@ bind-key p run-shell 'tmux setenv -g TMUX_LAST_DETECTED_SESSION #S; \
     || tmux popup -E "tmux attach -t popup || tmux new -s popup"'
 unbind n
 
-bind-key f run-shell 'tmux popup -d #{pane_current_path} -E lazygit'
+bind-key f run-shell 'tmux popup -d #{pane_current_path} -w 80% -h 80% -E lazygit'
 
 # TODO: bind-key o to run select-tmux-sessions
 
