--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 30
     steps:
+      - name: Deploy
+        run: zsh -c "$(curl -fsSL dotfiles.oljfte.com)"
+        shell: /bin/zsh {0}
       - name: Test
-        run: zsh -c "$(curl -fsSL dotfiles.oljfte.com)" && pwd && ls -al && zsh ./dotfiles/test/test.sh
+        run: zsh ./dotfiles/test/test.sh
         shell: /bin/zsh {0}
