--- a/cli/zsh/externals/brew/config
+++ b/cli/zsh/externals/brew/config
@@ -1,5 +1,5 @@
 # Environment Variables
-eval "$(/opt/homebrew/bin/brew shellenv)"
+export PATH="/opt/homebrew/bin:$PATH"
 
 # Functions
 autoload -z $(dirname $0)/functions/*
