--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -16,7 +16,6 @@ brew "exa"
 brew "fd"
 brew "jpeg"
 brew "ffmpeg"
-brew "fswatch"
 brew "fzf"
 brew "gh"
 brew "git"
@@ -42,7 +41,6 @@ brew "ruby"
 brew "rustup"
 brew "shpotify"
 brew "svn"
-brew "tldr"
 brew "tmux"
 brew "trash"
 brew "tree"
@@ -70,4 +68,5 @@ cask "timing"
 mas "EventScripts", id: 525319418
 mas "LINE", id: 539883307
 mas "TweetDeck", id: 485812721
+mas "Vimari", id: 1480933944
 mas "Xcode", id: 497799835
