--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -18,6 +18,7 @@ brew "jpeg"
 brew "ffmpeg"
 brew "fzf"
 brew "gh"
+brew "ghq"
 brew "git"
 brew "gnu-sed"
 brew "go"
@@ -39,7 +40,6 @@ brew "rbenv"
 brew "ripgrep"
 brew "ruby"
 brew "rustup"
-brew "shpotify"
 brew "svn"
 brew "tmux"
 brew "trash"
