Add repo command as alternative to ghq

--- a/cli/zsh/externals/git/config
+++ b/cli/zsh/externals/git/config
@@ -1,5 +1,6 @@
 # Environment variables
 export GIT_EDITOR="nvim"
+export REPOSITORY_ROOT="~/repo"
 
 # Functions
 autoload -z $(dirname $0)/functions/*
