Add alias tkill

--- a/cli/zsh/externals/tmux/config
+++ b/cli/zsh/externals/tmux/config
@@ -8,6 +8,8 @@ for session_name in $(get-tmux-sessions-with-configs); do
     || select-tmux-session $session_name\"";
 done
 
+alias tkill="tmux kill-server"
+
 # ZLE
 function select-tmux-session-in-term() {
   if [ $TMUX ]; then
