--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -53,6 +53,7 @@ brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 cask "adobe-creative-cloud"
 cask "appcleaner"
+cask "cyberduck"
 cask "discord"
 cask "docker"
 cask "figma"
