--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "keith/formulae"
+brew "asdf"
 brew "bat"
 brew "bazel"
 brew "python@3.9"
