--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -7,6 +7,7 @@ tap "homebrew/services"
 tap "keith/formulae"
 brew "bat"
 brew "bazel"
+brew "python@3.10"
 brew "python@3.9"
 brew "coreutils"
 brew "cowsay"
