Update tmux related aliases

--- a/cli/zsh/externals/tmux/config
+++ b/cli/zsh/externals/tmux/config
@@ -9,9 +9,9 @@ for session_name in $(get-tmux-sessions-with-configs); do
     || select-tmux-session $session_name\"";
 done
 
-alias kilt="tmux kill-server"
-alias kilw="tmux kill-window"
-alias kilp="tmux kill-pane"
+alias kt="tmux kill-server"
+alias kw="tmux kill-window"
+alias kp="tmux kill-pane"
 
 # ZLE
 function select-tmux-session-in-term() {
