--- a/cli/brew/Brewfile
+++ b/cli/brew/Brewfile
@@ -27,7 +27,7 @@ brew "jq"
 brew "lazygit"
 brew "llvm"
 brew "mas"
-brew "neovim"
+brew "neovim", args: ["HEAD"]
 brew "node"
 brew "openblas"
 brew "perl"
